# api/handler_time.go
@@ -5,7 +5,7 @@ import (
 	"time"
 
 	"github.com/gin-gonic/gin"
-	"github.com/leegeobuk/financial-ledger/api/resource"
+    "github.com/leegeobuk/household-ledger/api/resource"
 )
 
 //	@Tags			Basic
@@ -14,13 +14,13 @@ import (
 //	@Produce		json
 //	@Success		200	{object}	resource.ResGetTime
 //	@Failure		500	{object}	resource.ResErr
-//	@Router			/api/ledger/time [get]
+//	@Router			/api/household-ledger/time [get]
 func (s *Server) Time(c *gin.Context) {
 	now := time.Now()
 	timestamp := strconv.FormatInt(now.Unix(), 10)
 	date := now.Format("2006-01-02 15:04")
 
-	OK(c, resource.ResGetTime{
+	resource.OK(c, resource.ResGetTime{
 		Timestamp: timestamp,
 		Date:      date,
 	})
