# docs/swagger.yaml
@@ -1,4 +1,27 @@
 definitions:
+  resource.ReqAddLedger:
+    properties:
+      date:
+        type: string
+      description:
+        type: string
+      income:
+        type: integer
+      user_id:
+        type: string
+    required:
+    - date
+    - description
+    - income
+    - user_id
+    type: object
+  resource.ResAddLedger:
+    properties:
+      ledger_id:
+        type: integer
+      user_id:
+        type: string
+    type: object
   resource.ResErr:
     properties:
       error:
@@ -14,7 +37,37 @@ definitions:
 info:
   contact: {}
 paths:
-  /api/ledger/ping:
+  /api/household-ledger/ledger:
+    post:
+      consumes:
+      - application/json
+      description: Add ledger
+      parameters:
+      - description: Add ledger request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/resource.ReqAddLedger'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/resource.ResAddLedger'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/resource.ResErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/resource.ResErr'
+      summary: Ledger
+      tags:
+      - Basic
+  /api/household-ledger/ping:
     get:
       description: Ping
       produces:
@@ -31,7 +84,7 @@ paths:
       summary: Ping
       tags:
       - Basic
-  /api/ledger/time:
+  /api/household-ledger/time:
     get:
       description: Time
       produces:
